# qside-mobile-v1

./: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/handler/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: AuthButton.tsx  magichome.tsx
src/components/ui/: connection.tsx  slider.tsx  sliderItem.tsx
src/components/wallet/: wallet-card.tsx
src/pages/: index.tsx
src/styles/: globals.css
