[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
security-framework = "=2.10"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "2.0.0-beta.19", features = [] }
reqwest = { version = "0.12.3", features = ["json", "gzip"] }
scraper = "0.19.0"
tauri-plugin-nfc = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
# tauri-plugin-nfc = { path = "../../plugins-workspace/plugins/nfc" }
[patch.crates-io]
security-framework = { git = "https://github.com/kornelski/rust-security-framework.git", branch = "main" }
